# pyphantom

./: .gitignore  LICENSE  README.md  generate.py  phantom-gen.py  phantom-generation.ipynb  pyproject.toml
pydigiphan/file/: __init__.py
pydigiphan/phantom/: __init__.py
pyphantom/: __init__.py
pyphantom/cmdline/: __init__.py  _parser.py
pyphantom/fileio/: __init__.py  _writefile.py
pyphantom/fileio/_utils/: __init__.py
pyphantom/phantom/: __init__.py
pyphantom/phantoms/: __init__.py  _generator.py  _helper.py  _phantom.py
