[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Fang Han", email = "fhan0904@gmail.com" }]
dependencies = ["numpy", "matplotlib", 'scikit-image']
name = "pyphantom"
dynamic = ["version"]
description = "Python package for generating digital phantom for the SPEBT project."
readme = "README.md"
requires-python = ">=3.9.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/spebt/pyphantom/"
Issues = "https://github.com/spebt/pyphantom/issues"
Documentation = "https://spebt.github.io/pyphantom/"

[tool.setuptools]
include-package-data = true
packages = ["pyphantom"]
#where = "."
